# ai_powered_crm

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: __init__.py  app.py  config.py  database.py  models.py  seed_data.py
backend/ingestion/: extractors.py  normalizer.py  pipeline.py
backend/intelligence/: benchmarking.py  llm_client.py  risk_engine.py
backend/observability/: logger.py  metrics.py
backend/search/: hybrid_search.py  query_engine.py  vector_store.py
frontend/: Dockerfile  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
mock_data/csv/: SUP001_07_PROJ-ECHO.csv  SUP002_01_PROJ-DELTA.csv  SUP002_03_PROJ-DELTA.csv  SUP004_06_PROJ-ALPHA.csv  SUP008_02_PROJ-DELTA.csv  SUP008_07_PROJ-ECHO.csv
mock_data/email/: SUP002_02_PROJ-BRAVO.txt  SUP002_05_PROJ-DELTA.txt  SUP003_04_PROJ-ECHO.txt  SUP005_02_PROJ-BRAVO.txt  SUP005_05_PROJ-ALPHA.txt  SUP006_04_PROJ-CHARLIE.txt  SUP008_05_PROJ-ALPHA.txt
mock_data/manifest/: quotation_manifest.json
mock_data/scan_sim/: SUP002_06_PROJ-BRAVO.txt  SUP006_02_PROJ-CHARLIE.txt  SUP006_05_PROJ-DELTA.txt
mock_data/xlsx/: SUP001_02_PROJ-ALPHA.xlsx  SUP001_05_PROJ-CHARLIE.xlsx  SUP002_04_PROJ-BRAVO.xlsx  SUP003_02_PROJ-ECHO.xlsx  SUP003_05_PROJ-CHARLIE.xlsx  SUP004_03_PROJ-BRAVO.xlsx  SUP005_04_PROJ-DELTA.xlsx  SUP006_01_PROJ-DELTA.xlsx  SUP006_03_PROJ-DELTA.xlsx  SUP006_06_PROJ-ECHO.xlsx  SUP008_04_PROJ-DELTA.xlsx
mock_data_generation/: __init__.py  data_definitions.py  generate_all.py  other_generators.py  pdf_generator.py
(+10 files in other folders)
