[project]
name = "nexusolve-crm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "chromadb>=1.5.9",
    "fastapi>=0.138.0",
    "groq>=0.25.0",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.10",
    "pillow>=12.2.0",
    "python-multipart>=0.0.32",
    "rank-bm25>=0.2.2",
    "reportlab>=5.0.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
